[project]
name = "snaqcs-python-client"
version = "0.2.1"
description = "Python client for the SNAQCS quantum error correction API"
readme = "README.md"
authors = [
    { name = "Jesko Merkel", email = "jmerkel@point-8.de" }
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/point8/snaqcs-python-client"
Repository = "https://github.com/point8/snaqcs-python-client"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]
